--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+  <title>Frontend Mentor | Article preview component</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
@@ -12,46 +12,47 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <main>
-    <picture>
-      <img src="images/bg-pattern-mobile.svg">
-    </picture>
-    
+    <span>
+      <img src="images/drawers.jpg" alt="Drawers Image">
+    </span>
+
     <section>
-      <h1>FAQ</h1>
-      <a class="one">How many team members can I invite?
-        <span><img src="images/icon-arrow-down.svg"></span>
-      </a>
-      <p class="one hidden-p">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>  
-      <hr>  
+      <h1>Shift the overall look and feel by adding these wonderful 
+        touches to furniture in your home</h1>
+      <p>Ever been in a room and felt like something was missing? Perhaps 
+        it felt slightly bare and uninviting. I’ve got some simple tips 
+        to help you make any room feel complete.</p>
+      <div>
+        <div>
+          <span><img src="images/avatar-michelle.jpg" alt="Michelle Appleton"></span>
+          <div>
+            <h2>Michelle Appleton</h2>
+            <p>28 Jun 2020</p>
+          </div>
+        </div>
 
-      <a class="two selected-a">What is the maximum file upload size?
-        <span><img src="images/icon-arrow-down.svg"></span>
-      </a>
-      <p class="two">No more than 2GB. All files in your account must fit your allotted storage space.</p>
-      <hr>
+        <span class="button">
+          <img src="images/icon-share.svg" alt="Share">
+        </span>
+      </div>
 
-      <a class="three">How do I reset my password?
-        <span><img src="images/icon-arrow-down.svg"></span>
-      </a>
-      <p class="three hidden-p">Click “Forgot password” from the login page or “Change password” from your profile page.A reset link will be emailed to you.</p>
-      <hr>
+      <div class="div-absolute">
+        <div>
+          <h3>SHARE</h3>
+          <span><img src="images/icon-facebook.svg" alt="Share on Facebook"></span>
+          <span><img src="images/icon-twitter.svg" alt="Share on Twitter"></span>
+          <span><img src="images/icon-pinterest.svg" alt="Share on Pinterest"></span>
+        </div>
 
-      <a class="four">Can I cancel my subscription?
-        <span><img src="images/icon-arrow-down.svg"></span>
-      </a>
-      <p class="four hidden-p">Yes! Send us a message and we’ll process your request no questions asked.</p>
-      <hr>
-
-      <a class="five">Do you provide additional support?
-        <span><img src="images/icon-arrow-down.svg"></span>
-      </a>
-      <p class="five hidden-p">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-      <hr>
+        <span class="button">
+          <img src="images/icon-share.svg" alt="Share">
+        </span>
+      </div>
     </section>
   </main>
 
